# ssh-terminal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  check_mac.py
.github/: CI_CD_SETUP.md  pull_request_template.md  ssh_connect.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-ios.yml  dependencies.yml  nightly.yml  release.yml  test.yml
docs/: CI_CD.md  SECURITY.md  SETUP.md
scripts/: build.ps1  build.sh  patch-xcode.sh  ssh_connect.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  crypto.rs  lib.rs  main.rs  session.rs  ssh.rs
src-ui/: index.html
src-ui/css/: styles.css
src-ui/js/: app.js
