[package]
name = "ssh-terminal"
version = "0.1.0"
description = "A secure, cross-platform SSH terminal application built with Tauri"
authors = ["SSH Terminal App"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ssh_terminal"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ssh-terminal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
ssh2 = "0.9"
async-trait = "0.1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
keyring = "2.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
directories = "5.0"
uuid = { version = "1.6", features = ["v4"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
